--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <nav class="menu">
                 <ul>
                     <li><a href="#">Início</a></li>
-                    <li><a href="projetos">Projetos</a></li>
+                    <li><a href="#projetos">Projetos</a></li>
                     <li><a href="#">Habilidades</a></li>
                 </ul>
                 <div class="btn-contato">
